Bug 1418444 - Allow inline display and saving of Content-Type: application/octet-stream. r=jorgk